[package]
name = "dyfi-client"
version = "0.4.1"
authors = ["Ronja Koistinen <ronja.koistinen@kapsi.fi>"]
edition = "2021"

[dependencies]
reqwest = { version = "^0.12", features = ["blocking"] }
dotenvy = "^0.15"
log = "^0.4"
env_logger = "^0.11"

[dev-dependencies]
mockito = { version = "^1.0", default-features = false }
